--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,11 @@ button:disabled{
   padding-top: 16px;
 }
 
+h2{
+  margin: 0 0 10px 0;
+  font-size: 16px;
+}
+
 pre{
   margin: 0;
   white-space: pre-wrap;
@@ -121,4 +126,3 @@ pre{
   color: #b42318;
   font-size: 14px;
 }
-
